# QQP-Analytics

./: .gitignore  README.md  pyproject.toml
src/qqp/: io_utils.py  os_utils.py  rar.py  stores.py
src/qqp/config/: paths.py  settings.py
src/qqp/database/: db_models.py  engines.py  insert_staging.py  load_db.py  reset_sqlite.py  sqlite_models.py
src/qqp/db/: models.py
src/qqp/process_data/: process_row.py  processed_file.py  settings.py  stores.py
src/qqp/process_data/puebla_csv/: clean.py  decode.py
src/qqp/puebla_csv/: clean.py  decode.py
